# zap2py

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  lineups.yaml  newzap2xml.pl  newzap2xml_lean.pl  pyproject.toml  update_epg.sh  zap2xml.pl  zap2xml2.pl
tests/: sample_lineups.yaml  test_config_parsing.py
zap2py/: __main__.py
zap2py/core/: __main__.py  cache.py  network.py  parser.py  utils.py  xmltv.py
